Aumento tamaño del logo de Migrayo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 </head>
 <body>
   <header>
+  <div class="logo">
+    <img src="img/logo.png" alt="Logo Migrayo">
     <h1>Migrayo</h1>
-    <nav>
-      <a href="#about">Sobre Nosotros</a>
-      <a href="#benefits">Beneficios</a>
-      <a href="#testimonios">Testimonios</a>
-      <a href="#contacto">Contacto</a>
-    </nav>
-  </header>
+  </div>
+  <nav>
+    <a href="#about">Sobre Nosotros</a>
+    <a href="#benefits">Beneficios</a>
+    <a href="#testimonios">Testimonios</a>
+    <a href="#contacto">Contacto</a>
+  </nav>
+</header>
 
   <section class="hero">
     <h2>Tu talento no tiene pasaporte</h2>
